idf_component_register(SRCS "Adafruit_BME280.cpp" "Adafruit_BusIO_Register.cpp" "Adafruit_I2CDevice.cpp" "Adafruit_Sensor.cpp" "Adafruit_SPIDevice.cpp" "Adafruit_ADXL343.cpp" "Adafruit_ADXL375.cpp" "Adafruit_BNO055.cpp"
                       INCLUDE_DIRS "includes"
                       REQUIRES arduino)
